[tool.poetry]
name = "ansible-role-helm"
version = "0.1.0"
description = "Ansible role for installing Helm CLI on Linux"
authors = ["Audun Nes <audun.nes@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^11.0.0"

[tool.poetry.group.dev.dependencies]
ansible-lint = { version = "^24.2.0", markers = "platform_system != 'Windows'" }
flake8 = "^7.0.0"
yamllint = "^1.35.0"
molecule-docker = "^2.1.0"
molecule = "^24.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">1.8"
